DiceRoll Program, bug with images not showing up despite logs seeming to be working correclty

--- a/Dice_Roller/style.css
+++ b/Dice_Roller/style.css
@@ -28,3 +28,9 @@ button:hover{
 button:active{
     background-color: hsl(180, 91%, 75%);
 }
+#DiceResult{
+    margin-top: 15px;
+}
+#ImagesResult{
+    max-width: 150px;
+}
